# DonoganAndTheLonelyRaceOfMen

./: CMakeLists.txt  LICENSE  README.md  bg.h  build.bat  collision.h  control.h  core.h  don.save.txt  donogan.h  duct_tape.h  fish.h  game.h  interact.h  items.h  jc.h  menu.h  models.h  music.h  npc.h  ollama.config.txt  placement.txt  platform.h  preview.c  timer.h  truck.h  util.h  whale.h
blender_tools/: glb_fromMeshy_cleanup_forRaylib.py
map/: clean_tiles.bat  clean_tiles.py
models/: apple.mtl  atreyu.mtl  book.mtl  bow.glb  bow.mtl  canoe.mtl  chicken_run.glb  darrel_orig.glb  donogan.mtl  firepit.mtl  fish.mtl  ghost.mtl  health.mtl  health_full.mtl  home_001.mtl  home_002.mtl  home_003.mtl  home_004.mtl  home_005.mtl  home_006.mtl  home_007.mtl  mana.mtl  robo.mtl  rotor.mtl  shadow_book.mtl  tree_of_life.mtl
res/: RCa26892  RCb26892  app.rc
shaders/100/: grass_lighting.fs  grass_lighting_instancing.vs
shaders/120/: fire.fs  fire.vs  lightning_ball.fs  lightning_ball.vs
shaders/330/: ghost.fs  ghost.vs
